# kd4dataset-transfer

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
kd4dataset_transfer/: __init__.py  dataset.py  features.py  plots.py
kd4dataset_transfer/modeling/: predict.py  train.py
kube/: kd-pod.yml
kube/kd-pvc/: expose_kd.yml  ingress_kd.yml  pvc_kd.yaml  serverdepnginxfancy.yml
