[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kd4dataset_transfer"
version = "0.0.1"
description = "A novel approach leveraging knowledge distillation to resolve input feature mismatches between different datasets, thereby reducing performance gaps in transferring foundation models between datasets with different input features within HEP."
authors = [
  { name = "Sitian Qian, Zihan Zhao, Haoyang Li, Grace Zhu, Javier Duarte" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["kd4dataset_transfer"]
force_sort_within_sections = true
